--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -5,7 +5,21 @@
    "metadata": {},
    "source": [
     "# Methodology and study procedure are described well. (2P)\n",
-    "Johannes"
+    "### Participants: \n",
+    "\n",
+    "Three Students aged 24, 24 and 26, were recruited for a Fitts Law Study of different input devices. The Participants all had experience using a touchpad and mouse as an input device, one participant developed the pointing device and therefor had some prior experience using it(P3).\n",
+    "\n",
+    "### Experiment Setup:\n",
+    "The study was conducted in a controlled environment to external variables impact on the results.\n",
+    "A Lenovo ThinkPad L13 Yoga Gen Notebook was used for the Study (13\" Screen) with the builtin 1080p webcam being used for the pointing device, the builtin touchpad was used as another input device. A Razer Basilisk V3 X Hyperspeed was used at 800dpi for the mouse inputs on a standard mousepad. For the pointing device a pointing detection python script using the integrated webcam based on googles mediapipe was used which tracked the index finger of participants for cursor movement and detected left-clicking through a touching of the palm with the other fingers.\n",
+    "\n",
+    "### Procedure:\n",
+    "The participants were first explained the study design and verbal consent was acquired. Then each participant performed a Fitts Law task with each of the input devices in a random order. Each input condition consisted of 9 different constellations of different target circle diameters and the distance of the targets to each other. With each constellation needing 10 clicks to complete(90 per device). Before the pointing device condition started the participants were instructed on how to use it and were allowed to practice on the Desktop for a few minutes. \n",
+    "\n",
+    "### Data:\n",
+    "The Data that was collected consisted of the time inbetween target clicks (movement time) and how many missed clicks occurred(accuracy) while also tracking the index of difficulty ( distance of targets and target size) .\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -382,9 +396,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# There is a section discussing problems that occurred during the assignment. (1P)\n",
-    "both"
+    "# Problems that occurred\n",
+    "### Pointing Device :\n",
+    "Accurate tracking worked pretty fast but getting an intuitive easy to use clicking method was not as easy the palm solution is satisfactory yet it usually slightly alters the position of the index finger which can lead to cursor movement during clicking reducing accuracy, further more if one doesn't lift the fingers high enough after clicking unwanted clicks can be detected, this is likely the reason for the much lower accuracy. Also arm fatigue set in during the study as holding your hand up for several minutes can be strenuous, although historical data indicates germans to be better at such hand poses so further research with a more ethnically diverse participant pool should be conducted. Also, the pointing detection lags a bit.\n",
+    "\n",
+    "### Study: \n",
+    "Participant 1 had problems reaching the lowest targets with the pointing device, so that task had to be repeated with the participant being farther away from the webcam which solved the issue.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
