--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -398,7 +398,7 @@
    "source": [
     "# Problems that occurred\n",
     "### Pointing Device :\n",
-    "Accurate tracking worked pretty fast but getting an intuitive easy to use clicking method was not as easy the palm solution is satisfactory yet it usually slightly alters the position of the index finger which can lead to cursor movement during clicking reducing accuracy, further more if one doesn't lift the fingers high enough after clicking unwanted clicks can be detected, this is likely the reason for the much lower accuracy. Also arm fatigue set in during the study as holding your hand up for several minutes can be strenuous, although historical data indicates germans to be better at such hand poses so further research with a more ethnically diverse participant pool should be conducted. Also, the pointing detection lags a bit.\n",
+    "Accurate tracking worked pretty fast but getting an intuitive easy to use clicking method was not as easy the palm solution is satisfactory yet it usually slightly alters the position of the index finger which can lead to cursor movement during clicking reducing accuracy, further more if one doesn't lift the fingers high enough after clicking unwanted clicks can be detected, this is likely the reason for the much lower accuracy. Also arm fatigue set in during the study as holding your hand up for several minutes can be strenuous. Also, the pointing detection lags a bit.\n",
     "\n",
     "### Study: \n",
     "Participant 1 had problems reaching the lowest targets with the pointing device, so that task had to be repeated with the participant being farther away from the webcam which solved the issue.\n",
