--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -206,7 +206,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### movement time participants and movement time input device "
+    "### Movement Time in Relation to Participants and Input Devices\n",
+    "\n",
+    "The first graph displays the average accuracy of participants using each input device. It indicates that participants required more time with the pointing program. The mouse and mouse latency exhibit similar timings since both involve the same input with delayed output. Users with touchpads were slightly slower than those with mice. </br>\n",
+    "\n",
+    "The four graphs below depict the time taken by users to click from one target to the next. Each graph represents one input device, showing data for all participants. Most of the times are closely grouped, except for the pointing device, where times are more varied. </br>\n",
+    "\n",
+    "Participant 2 achieved an exceptional score, which is why the scale in the top graph is stretched."
    ]
   },
   {
@@ -240,6 +246,15 @@
     "    plt.show()\n",
     "\n",
     "plot_average_accuracy(avg_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accuracy\n",
+    "\n",
+    "The graph below illustrates the average accuracy for each input device. Among the participants, the mouse and touchpad achieved the highest accuracy, while the pointing device performed significantly worse. It is evident that introducing a 150ms latency results in decreased accuracy. However, overall, the mouse, mouse latency, and touchpad remain consistently accurate."
    ]
   },
   {
@@ -334,6 +349,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Index of Difficulty\n",
+    "\n",
+    "The Index of Difficulty (ID) is calculated using the formula: </br>\n",
+    "\n",
+    "$\\text{ID} = \\log_{2} \\left( \\frac{2D}{W} \\right)$\n",
+    "\n",
+    "Difficulty increases when the target radius (W) decreases or the distance to the target (D) increases. </br>\n",
+    "\n",
+    "In the first graph, all clicking times for each Index of Difficulty (ID) are displayed. Most points are clustered closely together, making them appear as a single symbol. The pointing device stands out in terms of Index of Difficulty as well. Surprisingly, all input devices performed exceptionally well at the lowest Index of Difficulty. </br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 155,
    "metadata": {},
@@ -396,6 +426,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Hits and Missed Targets\n",
+    "\n",
+    "These two graphs illustrate the total clicks and missed clicks for each input device across rounds. Each participant contributed three data points for every input device. </br>\n",
+    "\n",
+    "The pointing device required more total clicks to complete the task and also had a higher number of missed clicks. The other three input devices showed similar performance levels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "\n",
+    "Among the four devices, the pointing device proved to be the most challenging for users. It exhibited the poorest performance in the graphs, requiring the most time to complete tasks and showing the lowest accuracy in hitting targets. </br>\n",
+    "\n",
+    "The other three devices performed similarly to each other. The mouse latency, while comparable to the mouse without latency in clicking times, showed slight performance lag in accuracy. </br>\n",
+    "\n",
+    "The touchpad demonstrated high accuracy but required more time to hit the target. </br>\n",
+    "\n",
+    "Overall, the mouse emerged as the top-performing input device in this study. </br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Problems that occurred\n",
     "### Pointing Device :\n",
     "Accurate tracking worked pretty fast but getting an intuitive easy to use clicking method was not as easy the palm solution is satisfactory yet it usually slightly alters the position of the index finger which can lead to cursor movement during clicking reducing accuracy, further more if one doesn't lift the fingers high enough after clicking unwanted clicks can be detected, this is likely the reason for the much lower accuracy. Also arm fatigue set in during the study as holding your hand up for several minutes can be strenuous. Also, the pointing detection lags a bit.\n",
@@ -403,17 +459,16 @@
     "### Study: \n",
     "Participant 1 had problems reaching the lowest targets with the pointing device, so that task had to be repeated with the participant being farther away from the webcam which solved the issue.\n",
     "\n",
+    "### Data Access and Latency Issues:\n",
     "\n",
+    "The CSV files presented challenges when plotting the data, making it difficult to retrieve specific information from the study. Perhaps having more CSV files or using other formats could have facilitated easier access to the data.\n",
+    "\n",
+    "### Latency:\n",
+    "\n",
+    "Adding latency to the mouse pointer wasn't feasible, so it had to be deactivated, and a point was used instead.\n",
     "\n",
     "\n"
    ]
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
   }
  ],
  "metadata": {
