--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Methodology and study procedure are described well. (2P)\n",
+    "# Methodology and study procedure are described well. \n",
     "### Participants: \n",
     "\n",
     "Three Students aged 24, 24 and 26, were recruited for a Fitts Law Study of different input devices. The Participants all had experience using a touchpad and mouse as an input device, one participant developed the pointing device and therefor had some prior experience using it(P3).\n",
@@ -26,17 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data of at least three participants is captured appropriatly. (3P)\n",
-    "\n",
-    "already done"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Results are reported, compared, and discussed well. (2P)\n",
-    "Michael"
+    "# Results are reported, compared, and discussed well."
    ]
   },
   {
