--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -159,6 +159,7 @@
     "        return sum(total_sum) / num_elements\n",
     "    else:\n",
     "        return 0\n",
+    "    \n",
     "#grouping\n",
     "avg_times = df.groupby(['Participant ID', 'Input Device'])['Click Times'].apply(calculate_average_times).reset_index()\n",
     "\n",
@@ -187,9 +188,7 @@
     "#plots\n",
     "plot_average_times(avg_times)\n",
     "plot_side_by_side(mouse_scatter_data, 'mouse', touchpad_scatter_data, 'touchpad')\n",
-    "plot_side_by_side(mouselatency_scatter_data, 'mouselatency', pointing_scatter_data, 'pointing')\n",
-    "\n",
-    "\n"
+    "plot_side_by_side(mouselatency_scatter_data, 'mouselatency', pointing_scatter_data, 'pointing')"
    ]
   },
   {
@@ -225,7 +224,7 @@
     "#grouping\n",
     "avg_accuracy = df.groupby('Input Device')['Accuracy'].mean().reset_index()\n",
     "\n",
-    "#plots accuracy\n",
+    "#plot accuracy\n",
     "def plot_average_accuracy(avg_accuracy):\n",
     "    fig, ax = plt.subplots(figsize=(8, 6))\n",
     "    ax.bar(avg_accuracy['Input Device'], avg_accuracy['Accuracy'], color=['blue', 'green', 'red', 'purple'])\n",
@@ -282,16 +281,13 @@
     }
    ],
    "source": [
-    "# Plotting\n",
-    "\n",
-    "# Function to flatten nested lists \n",
     "#chat gpt\n",
     "def flatten(lst):\n",
     "    return [item for sublist in lst for item in sublist]\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
-    "# Define markers and colors for each device\n",
+    "#markers and colors\n",
     "markers = ['o', 's', '^', 'd']\n",
     "colors = ['blue', 'green', 'red', 'purple']\n",
     "\n",
@@ -309,18 +305,16 @@
     "\n",
     "plt.show()\n",
     "#------------------\n",
-    "# Function to calculate average click times per ID for each device\n",
+    "#average click time\n",
     "def calculate_avg_click_times(group):\n",
     "    flattened_click_times = [item for sublist in group['Click Times'] for item in sublist]\n",
     "    return np.mean(flattened_click_times)\n",
     "\n",
-    "# Group by Input Device and ID, calculate average click times\n",
+    "#group\n",
     "avg_click_times = df.groupby(['Input Device', 'ID']).apply(calculate_avg_click_times).reset_index(name='Average Click Time')\n",
     "\n",
-    "# Plotting\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
-    "# Define markers and colors for each device\n",
     "markers = ['o', 's', '^', 'd']\n",
     "colors = ['blue', 'green', 'red', 'purple']\n",
     "\n",
@@ -335,7 +329,7 @@
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -387,7 +381,6 @@
     "plt.scatter(mouselatency_data['Round'], mouselatency_data['Total Clicks'], label='Mouse Latency', color='red', marker='^')\n",
     "plt.scatter(pointing_data['Round'], pointing_data['Total Clicks'], label='Pointing Device', color='purple', marker='d')\n",
     "\n",
-    "# Add labels and title\n",
     "plt.xlabel('Round')\n",
     "plt.ylabel('Total Clicks')\n",
     "plt.title('Total Clicks for Each Input Device by Round')\n",
@@ -403,7 +396,6 @@
     "plt.scatter(mouselatency_data['Round'], mouselatency_data['Missed Clicks'], label='Mouse Latency', color='red', marker='^')\n",
     "plt.scatter(pointing_data['Round'], pointing_data['Missed Clicks'], label='Pointing Device', color='purple', marker='d')\n",
     "\n",
-    "# Add labels and title\n",
     "plt.xlabel('Round')\n",
     "plt.ylabel('Missed Clicks')\n",
     "plt.title('Missed Clicks for Each Input Device by Round')\n",
